--- a/style.css
+++ b/style.css
@@ -21,8 +21,8 @@ a, button {
 /*베라 로고 이미지 */
 .logo img{ 
   float: left;
-  width: 145px;
-  height: 145px;
+  width: 15%;
+  height: 15%;
   margin-left: 3.3%;
   margin-top: 3%;
 }
@@ -34,9 +34,9 @@ a, button {
   color: gray;
 }
 .site_top a {
-  font-size: 30px;
+  font-size: 13px;
   color: #ff80ab;
-  padding: 0 45px 0 12px; 
+  padding: 0 1px 0 1px; 
   margin-top: 8%;
   display: inline-block; 
   font-weight: 900;
@@ -44,67 +44,74 @@ a, button {
 } 
 #menu_button { 
   float: right;
-  margin-right: 1%;
+  margin-top: 7%;
+  margin-right: 2%;
   border: none; 
   text-indent: -9999em; 
   background: url(img/menu.png) no-repeat  ;
   background-size: 60%;
-  width: 100px;
-  height: 100px; 
-  margin-top: 7%;
+  width: 35px;
+  height: 50px; 
 }
-/* 배너 시작 */
+/* 배너  */
 .banner img {
   width: 100%;
   height:100%;
-  margin-top: 3%;
+  margin-top: 1px;
 }
 /*BR EVENT*/
-.BR img { /*BR: br로 시작하는 글자 이미지 class*/
+.BR {/*BR: br로 시작하는 글자 이미지 class*/
+  margin-bottom: 7%;  
+}
+.BR img { 
   width: 21%;
   display: block;
   margin-left: auto;
   margin-right: auto;
   margin-top: 6%;
 }
+.br_event { 
+  width: 100%;
+  margin-bottom: 10px;
+} 
+.swiper-slide nav ul{
+  padding: 2%;
+}
 .tit { 
   float: left;
-  width: calc(100% /2 - 2%);
-  padding: 1%;
-  border-radius: 15%;
+  width: 50%;
+  padding: 1px;
 }
- .tit img { 
-  border-radius: 3%; 
+ .tit a img { 
+  border-radius: 2%; 
 } 
 .title {  
-  font-size: 35px;
+  font-size: 12px;
   color: #424242;
   font-weight: lighter ;
 }
 .period {
-  font-size: 25px;
+  font-size: 10px;
   font-weight: lighter ;
   color: #757575;
+  margin-top: 5px;
 }
-/*BR MENU*/
-.BR {
-  margin-bottom: 7%;  
-}
-/* br store */
-.store { 
-  display: block ;
-  margin-left: auto;
-  margin-right: auto;
-  width: 100%;
-  margin-bottom: 10px;
-  border: 1px solid #eaeaea;
-} 
 
-/* BR MENU  */
+
+/*BR MENU*/
 .long_menu {
   background-color: #eeeeee;
   margin-top: 10%;
 }
+/* BR STORE */
+.store { 
+  display: block ;
+  margin-left: auto;
+  margin-right: auto;
+  width: 90%;
+  margin-bottom: 10px;
+} 
+
 /* happy order & delivery*/
 .happy_order {
   display: block;
@@ -126,7 +133,7 @@ a, button {
   float: left;
   width: 20%;
   padding: 0 ;
-  margin:0;
+  margin-bottom: 10%;
 }
 .sns_list img {
   width: 60%;
@@ -149,65 +156,77 @@ a, button {
 /* 더보기+ */
  .button {
   border-radius: 42px;
-  color: black;
+  color: #795548;
   padding: 3%;
   width: 45%;
-  margin-top: 3%;
+  margin-top: 5%;
   background-color: white;
   border-color: #bfbfbf;
-  font-size: 35px;
+  font-size: 17px;
   font-weight: 900;
 } 
-/* footer */
+/* footer 시작 */
 .footer_2 a{
-  font-size: 30px;
+  font-size: 12px;
   color: #757575;
+  float: left;
 }
+.footer_2 ul {
+  padding: 3%;
+ }
 .footer_2 li {
   float:left;
-  padding: 5px;
+  margin-top: 1px;
 }
- #pink {
+ #pink { /*개인정보처리방침*/
   color: #ff80ab;
   font-weight: 900;
 }
 /* 해피포인트 ..~~ */
 #footer .brand_family li {
   float: left;
-  width: 16%; 
+  width: 16.666%; 
+  height: 10%;
   box-sizing: border-box;
   z-index: 1;
-  padding: 1%;
+  padding: 1px;
 }
 #footer .brand_family .brand img {
-  width: 90%;
-  height: 60%;
+  width: 60%;
+  height: 30%;
+  margin-bottom: 10px;
+  margin-top: 5px;
 }
 #footer .brand {
   float: left; 
-  padding: 1%;
+}
+#footer .brand ul {
+  padding: 3%;
 }
 #footer .brand_family li a {
   display: block;
-  width: 110%;
-  height: 180px;
+  width: 100%;
+  height: 80px;
   border: 1px solid #d1cecc;
-  padding:10px;
-  color: #726456;
-  font-size: 20px;
+  padding: 5px 0 5px;
+  font-size: 5px;
   text-align: center;
-  letter-spacing: -.08em;
+  box-sizing: border-box;
+  letter-spacing: -.2em;
   line-height: 1.1;
-  border-radius: 15%;
-  padding: 20%;
+  border-radius:8%;
 }
+#footer .brand_family li span {
+  color: #726456; 
+}
+
 /* 고객센터랑 전화번호 부분 */
 #footer .tel img{
   width:5%;
-  margin-left: 20px;
+  margin-left: 2%;
 }
 #footer .tel a {
-  font-size: 30px;
+  font-size: 12px;
   color: #c8baa9;
   font-weight: bold;
 }
@@ -216,23 +235,27 @@ a, button {
   color: white;
   cursor: pointer;
   padding: 2%;
-  width: 20%;
+  width: 22%;
   margin-top: 3%;
   background-color:#c8baa9;
   border-color: #bfbfbf;
-  font-size: 35px;
+  font-size: 15px;
   font-weight: 900;
-  margin-left: 5%;
+  margin-left: 6%;
 }
 select {
  float: right;
- margin-right: 15%;
+ margin-right: 10%;
  margin-top: 4%;
  color:#c8baa9 ;
- width: 24%;
- font-size: 25px;
+ width: 27%;
+ font-size: 12px;
  padding: 1%;
 }
 .last_footer {
- margin-top: 4%;
+ margin-top: 1%;
 }
+#footer { /*푸터 아래 공백*/
+  margin-bottom: 16%;
+}
+/*끝*/
